# Stage_4

./: README.md  SOLUTION.md
backend/: .env.example  README.md  requirements.txt  seed.py
backend/.github/workflows/: ci.yml
backend/app/: cache.py  config.py  db.py  dependencies.py  main.py  models.py  nlp.py  query_utils.py  schemas.py  security.py  services.py  uploads.py
backend/tests/: test_auth_api_contract.py  test_query_optimization_and_uploads.py
cli/: .gitignore  Dockerfile  README.md  pyproject.toml
cli/.github/workflows/: ci.yml
cli/insighta_cli/: cli.py  client.py  config.py  security.py
web/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
web/.github/workflows/: ci.yml
web/app/: config.py  main.py
web/app/static/: styles.css
web/app/templates/: account.html  base.html  dashboard.html  login.html  profile_detail.html  profiles.html  search.html
