[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insighta"
version = "0.1.0"
description = "Insighta Labs+ CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer==0.12.5",
  "httpx==0.28.1",
  "rich==13.9.4",
]

[project.scripts]
insighta = "insighta_cli.cli:main"

[tool.setuptools.packages.find]
include = ["insighta_cli*"]
